--- a/Volunteer-Connect/Base.lproj/Main.storyboard
+++ b/Volunteer-Connect/Base.lproj/Main.storyboard
@@ -25,6 +25,7 @@
                                 </state>
                                 <connections>
                                     <action selector="select:" destination="dkx-z0-nzr" eventType="touchDown" id="0kW-Dd-ny7"/>
+                                    <segue destination="TKw-sC-8GY" kind="show" id="bn0-aA-Lhm"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hph-VV-GCF">
@@ -87,7 +88,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Search Parameters" id="IOt-NT-65k">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="dEV-b6-jYS"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="dEV-b6-jYS">
+                                            <connections>
+                                                <segue destination="BYZ-38-t0r" kind="show" id="f1g-F1-3jG"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -198,7 +203,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.12960961480687716" blue="0.6748709954277714" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.23365795544984247" green="0.78484527896017331" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </scrollView>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
@@ -261,4 +266,7 @@
             <point key="canvasLocation" x="1318" y="220"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="bn0-aA-Lhm"/>
+    </inferredMetricsTieBreakers>
 </document>
